Created ProductNotFoundException class